# Speedometer-Project

./: CMakeLists.txt  README.md
desktop/client/: main.cpp
desktop/client/include/: canvas.h  comservice.h  positions.h  tcpservice.h  uartservice.h  window.h
desktop/client/src/: canvas.cpp  comservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
desktop/server/: main.cpp
desktop/server/include/: comservice.h  tcpservice.h  uartservice.h  window.h
desktop/server/src/: comservice.cpp  tcpservice.cpp  uartservice.cpp  window.cpp
esp32/client/: platformio.ini
esp32/client/lib/central_utils/: esp_central.h
esp32/client/src/: main.c
esp32/server/: platformio.ini
esp32/server/lib/central_utils/: misc.c  peer.c
esp32/server/src/: main.c
shared/: setting.h
